# ecls-fairness-study

./: .gitignore  .zenodo.json  CITATION.cff  CLAUDE.md  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
.claude/: academic-review-suite-state.json  academic-review-suite.local.md
.github/workflows/: ci.yml
notebooks/: 01_data_exploration.ipynb
paper/: cover_letter.tex  cover_letter.txt  main.tex  main_anonymous.docx  main_anonymous.tex  references.bib  supplementary.docx  supplementary.tex  title_page.docx  title_page.tex
results/models/: model_card_elastic_net.json
results/reports/: fairness_report.txt
results/tables/: calibration_fairness.csv  calibration_fairness.tex  explanation_comparison.csv  fairness_disparities.csv  fairness_disparities.tex  fairness_group_metrics.csv  fairness_metrics_with_ci.csv  fairness_metrics_with_ci.tex  feature_importance.csv  intersectional_fairness.csv  missing_data_attrition_comparison.csv  missing_data_attrition_demographics.csv  missing_data_ipw_vs_unweighted.csv  missing_data_ipw_weight_diagnostics.csv  missing_data_mice_pooled_fairness.csv  missing_data_mice_vs_complete_case.csv  mitigation_comparison.csv  model_performance.csv  model_performance.tex  outcome_disparity_comparison.csv  outcome_fairness_comparison.csv  outcome_performance_comparison.csv  permutation_importance.csv  permutation_importance_bootstrap.csv  sensitivity_criteria.csv  sensitivity_disparities.csv  sensitivity_fairness.csv  sensitivity_performance.csv  shap_importance.csv  shap_importance_Asian.csv  shap_importance_Black.csv  shap_importance_Hispanic.csv  shap_importance_Other.csv  shap_importance_White.csv  shap_importance_differential_importance.csv  shap_importance_nan.csv  table1_descriptives.csv  (+11 more)
scripts/: parse_ascii_data.py  run_pipeline.py
src/: __init__.py  data_loader.py  descriptives.py  explainability.py  fairness.py  latex_tables.py  missing_data.py  models.py  sensitivity.py  temporal.py  visualization.py
tests/: conftest.py  test_data_loader.py  test_descriptives.py  test_explainability.py  test_fairness.py  test_latex_tables.py  test_missing_data.py  test_models.py  test_sensitivity.py  test_temporal.py  test_visualization.py
